fixed bg repeating & styled scrollbar in css

--- a/_sass/dash/_base.scss
+++ b/_sass/dash/_base.scss
@@ -20,17 +20,17 @@ html {
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #f1f1f1; 
+  background: #480883; 
 }
  
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #888; 
+  background: #56007e; 
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #555; 
+  background: #7e14a1; 
 }
 *:focus {
   outline: none;
